@@ -13,6 +13,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.concurrent.Future;
+import java.util.stream.Collectors;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ExecutorService;
@@ -60,7 +61,7 @@ public class PaperEsUploadServiceImpl implements PaperEsUploadService {
                                 e.printStackTrace();
                             }
                         }))
-                        .toList();
+                        .collect(Collectors.toList());
 
                 // 等待所有任务完成
                 for (Future<?> future : futures) {
